# whitespace-lsp

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml
client/: pnpm-lock.yaml
client/src/: extension.ts
programs/: factorial_cleaned.ws  fib-commented.ws
server/: Cargo.toml
server/src/: main.rs
