[package]
name = "whitespace-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.7"
lsp-types = "0.94"
serde = "1.0"
serde_json = "1.0"
whitespace = { path = "../../esoteric_playground/whitespace", default_features = false, features = [
  "tree-sitter",
] }
# tree-sitter-whitespace = { path = "C:/users/cueva/dev/tree-sitter-whitespace", optional = false }
tree-sitter = { version = "0.20.10", optional = false }
